--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:text="@string/nintendoButton"
         android:textColor="#FFFFFF" />
     <Button
-        android:id="@+id/mattsButton"
+        android:id="@+id/recipeSearchButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
