--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -29,6 +29,17 @@
 
     </LinearLayout>
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="?android:attr/progressBarStyleHorizontal"
+            />
+    </LinearLayout>
+
+    <LinearLayout
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
