--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -4,45 +4,61 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#CFF4F1"
     tools:context=".AlbumFragment">
 
     <TextView
         android:id="@+id/albumFragmentTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="30dp"/>
+        android:background="#CFF4F1"
+        android:textColor="#3F51B5"
+        android:textSize="30dp"
+        android:textAlignment="center"
+        android:gravity="center_horizontal" />
 
     <TextView
         android:id="@+id/artistFragmentName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/albumFragmentTitle"
-        android:textSize="20dp"/>
+        android:background="#CFF4F1"
+        android:textColor="#3F51B5"
+        android:textSize="20dp" />
+
     <TextView
         android:id="@+id/albumFragmentYear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/artistFragmentName"
-        />
+        android:background="#CFF4F1"
+        android:textColor="#3F51B5"
+        android:textSize="20dp"/>
+
     <TextView
         android:id="@+id/albumFragmentGenre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/albumFragmentYear"/>
+        android:layout_below="@+id/albumFragmentYear"
+        android:background="#CFF4F1"
+        android:textColor="#3F51B5"
+        android:textSize="20dp"/>
 
     <ScrollView
         android:id="@+id/SCROLLER_ID"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:scrollbars="vertical"
+        android:layout_below="@id/albumFragmentGenre"
+        android:background="#CFF4F1"
         android:fillViewport="true"
-        android:layout_below="@id/albumFragmentGenre">
-    <TextView
-        android:id="@+id/albumDescriptionFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="10dp"
-        android:layout_weight="1.0"/>
+        android:scrollbars="vertical">
+
+        <TextView
+            android:id="@+id/albumDescriptionFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.0"
+            android:textSize="15dp" />
     </ScrollView>
 
     <ListView
@@ -50,11 +66,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/SCROLLER_ID"
-        android:textSize="20dp"/>
+        android:layout_above="@id/albumSaveButton"
+        android:background="#CFF4F1"
+        android:textSize="20dp" />
 
     <Button
         android:id="@+id/albumSaveButton"
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:textColor="#CFF4F1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 </RelativeLayout>
