--- a/app/src/main/res/layout/activity_covidfragment.xml
+++ b/app/src/main/res/layout/activity_covidfragment.xml
@@ -6,4 +6,58 @@
     android:layout_height="match_parent"
     tools:context=".CovidFragment">
 
+    <TextView
+        android:id="@+id/covidFragmentTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+
+        />
+
+    <TextView
+        android:id="@+id/covidCountryFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/covidProvinceFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/artistFragmentName"
+        android:background="#CFF4F1"
+        android:textColor="#3F51B5"
+        android:textSize="20dp"/>
+
+    <TextView
+        android:id="@+id/covidStartDateFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"/>
+
+    <TextView
+        android:id="@+id/covidEndDateFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"/>
+
+    <TextView
+        android:id="@+id/covidCasesFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"/>
+
+
+
+    <ListView
+        android:id="@+id/covidListViewFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp" />
+
+    <Button
+        android:id="@+id/covidSaveButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
