--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -9,17 +9,20 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/recipeTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Title: "
             android:textSize="20dp"/>
 
         <TextView
+            android:id="@+id/ingredients"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Ingredients: "
             android:textSize="20dp"/>
         <Button
+            android:id="@+id/website"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="URL: "/>
@@ -29,6 +32,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <Button
+                android:id="@+id/favourite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Favourite"
