--- a/app/src/main/res/layout/activity_recipe_search.xml
+++ b/app/src/main/res/layout/activity_recipe_search.xml
@@ -40,6 +40,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <Button
+            android:id="@+id/favourite"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Favourites"
