--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -20,6 +20,7 @@
             android:layout_weight="100"
             />
         <Button
+            android:id="@+id/help"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Help"
