--- a/app/src/main/res/layout/activity_recipe_saved.xml
+++ b/app/src/main/res/layout/activity_recipe_saved.xml
@@ -15,11 +15,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Recipes"
+            android:text="Saved Recipes"
             android:textSize="35dp"
             android:layout_weight="100"
             />
         <Button
+            android:id="@+id/help"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Help"
