--- a/app/src/main/res/layout/activity_recipe_search.xml
+++ b/app/src/main/res/layout/activity_recipe_search.xml
@@ -47,6 +47,7 @@
             android:layout_weight="1"
             />
         <Button
+            android:id="@+id/help"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Help"
