--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -33,15 +33,10 @@
             android:orientation="horizontal">
             <Button
                 android:id="@+id/favourite"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Favourite"
-                android:layout_weight="4"/>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Help"
-                android:layout_weight="1"/>
+                android:text="Favourite"/>
+
         </LinearLayout>
 
     </LinearLayout>
