--- a/app/src/main/res/layout/activity_event_fragment.xml
+++ b/app/src/main/res/layout/activity_event_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
@@ -35,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:layout_below="@+id/StartDate"
+        android:layout_below="@+id/MinPrice"
         android:gravity="center_horizontal" />
 
     <TextView
@@ -46,6 +47,11 @@
         android:layout_below="@+id/MaxPrice"
         android:gravity="center_horizontal" />
 
+    <ImageView
+        android:id="@+id/imageURL"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/alert_dark_frame" />
 
 
 </RelativeLayout>
