--- a/app/src/main/res/layout/activity_event_fragment.xml
+++ b/app/src/main/res/layout/activity_event_fragment.xml
@@ -51,6 +51,7 @@
         android:id="@+id/imageURL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/URL"
         android:src="@android:drawable/alert_dark_frame" />
 
 
