Translation strings 'en-rGB' complete for recipe activities

--- a/app/src/main/res/layout/activity_recipe_saved.xml
+++ b/app/src/main/res/layout/activity_recipe_saved.xml
@@ -15,7 +15,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Saved Recipes"
+            android:text="@string/saySavedRecipes"
             android:textSize="35dp"
             android:layout_weight="100"
             />
@@ -23,7 +23,7 @@
             android:id="@+id/help"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Help"
+            android:text="@string/sayHelp"
             android:layout_weight="1"/>
 
 
