--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -12,20 +12,20 @@
             android:id="@+id/recipeTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Title: "
+            android:text="@string/sayTitle"
             android:textSize="30dp"/>
 
         <TextView
             android:id="@+id/ingredients"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ingredients: "
+            android:text="@string/sayIngredients"
             android:textSize="20dp"/>
         <Button
             android:id="@+id/website"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="URL: "/>
+            android:text="@string/sayUrl"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,7 +35,7 @@
                 android:id="@+id/favourite"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Favourite"/>
+                android:text="@string/sayFavorites"/>
 
         </LinearLayout>
 
