--- a/app/src/main/res/layout/activity_event_fragment.xml
+++ b/app/src/main/res/layout/activity_event_fragment.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#CFF4F1"
@@ -55,6 +55,7 @@
         android:layout_height="200dp"
         android:layout_below="@+id/URL"
         android:src="@android:drawable/alert_dark_frame" />
+
 
 
 
