--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -35,7 +35,7 @@
                 android:id="@+id/favourite"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/sayFavorites"/>
+                android:text="@string/sayFavorite"/>
 
         </LinearLayout>
 
