--- a/app/src/main/res/values-en-rGB/recipeStrings.xml
+++ b/app/src/main/res/values-en-rGB/recipeStrings.xml
@@ -9,6 +9,7 @@
     <string name="sayEnterRecipe">Enter Recipe</string>
     <string name="sayEnterPreferredIngredients">Enter Preferred Ingredients</string>
     <string name="saySearch">Search</string>
+    <string name="sayFavorite">Favourite</string>
     <string name="sayFavorites">Favourites</string>
     <string name="sayTitle">Title: </string>
     <string name="sayIngredients">Ingredients:</string>
