--- a/app/src/main/res/layout/activity_event_fragment.xml
+++ b/app/src/main/res/layout/activity_event_fragment.xml
@@ -13,7 +13,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:gravity="center_horizontal" />
+        android:gravity="center_horizontal"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+
+    <TextView
+        android:id="@+id/DateText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_below="@+id/EventTitle"
+        android:layout_marginTop="10dp"
+        android:text="@string/eventDate"
+        android:gravity="center_horizontal"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
 
     <TextView
@@ -21,38 +33,76 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:layout_below="@+id/EventTitle"
-        android:gravity="center_horizontal" />
+        android:layout_below="@+id/DateText"
+        android:gravity="center_horizontal"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+
+    <TextView
+        android:id="@+id/MinPriceText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_below="@+id/StartDate"
+        android:text="@string/minPrice"
+        android:layout_marginTop="10dp"
+        android:gravity="center_horizontal"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
     <TextView
         android:id="@+id/MinPrice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:layout_below="@+id/StartDate"
-        android:gravity="center_horizontal" />
+       android:layout_below="@+id/MinPriceText"
+        android:gravity="center_horizontal"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+
+    <TextView
+        android:id="@+id/MaxPriceText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_below="@+id/MinPrice"
+        android:layout_marginTop="10dp"
+        android:text="@string/maxPrice"
+        android:gravity="center_horizontal"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
     <TextView
         android:id="@+id/MaxPrice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:layout_below="@+id/MinPrice"
-        android:gravity="center_horizontal" />
+        android:layout_below="@+id/MaxPriceText"
+        android:gravity="center_horizontal"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+
+    <TextView
+        android:id="@+id/URLText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_below="@+id/MaxPrice"
+        android:layout_marginTop="10dp"
+        android:text="@string/link"
+        android:gravity="center_horizontal"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
     <TextView
         android:id="@+id/URL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:layout_below="@+id/MaxPrice"
-        android:gravity="center_horizontal" />
+        android:layout_below="@+id/URLText"
+        android:gravity="center_horizontal"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
 
     <ImageView
         android:id="@+id/imageURL"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_below="@+id/URL"
+        android:layout_marginTop="10dp"
         android:src="@android:drawable/alert_dark_frame" />
 
 
