--- a/app/src/main/res/values/dingstrings.xml
+++ b/app/src/main/res/values/dingstrings.xml
@@ -6,9 +6,11 @@
     <string name="searchButton">Search</string>
     <string name="helpButton">Help</string>
     <string name="SavedResults">See Saved Events</string>
+
     <string name="eventName">Events Name</string>
-    <string name="minPrice">Minimum Price </string>
-    <string name="maxPrice">Maximum Price </string>
+    <string name="eventDate">Date</string>
+    <string name="minPrice">Minimum Price ($) </string>
+    <string name="maxPrice">Maximum Price ($) </string>
     <string name="link">Link</string>
 
 
