--- a/app/src/main/res/layout/activity_ticket_master_event_search.xml
+++ b/app/src/main/res/layout/activity_ticket_master_event_search.xml
@@ -33,6 +33,7 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/authorTitle"
+        android:layout_marginTop="10dp"
         android:hint="@string/searchCity"
         android:layout_alignParentLeft="true"
         android:singleLine="true"
@@ -43,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/authorTitle"
+        android:layout_marginTop="10dp"
         android:layout_alignParentRight="true"
         android:hint="@string/searchRadius"
         android:singleLine="true"
