Added end date option in COVID_19_CASE_DATA.java AND completed Project final

--- a/app/src/main/res/values/FredString.xml
+++ b/app/src/main/res/values/FredString.xml
@@ -14,5 +14,7 @@
     <string name="save">SAVE</string>
     <string name="covidFragTitle">COVID-19 Data</string>
     <string name="countriesSaved">Countries Saved</string>
+    <string name="writeEndDate">End date (Write in YYYY-MM-DD format)</string>
+
 
 </resources>
