--- a/app/src/main/res/values-ko/StringFredKr.xml
+++ b/app/src/main/res/values-ko/StringFredKr.xml
@@ -4,6 +4,7 @@
     <string name="covidListTitle">코로나-19 전황</string>
     <string name="searchCountry">나라 찻기</string>
     <string name="writeStartDate">날짜 시작 (YYYY-MM-DD으로 적어주세요)</string>
+    <string name="writeEndDate">마지막 날짜 (YYYY-MM-DD으로 적어주세요)</string>
     <string name="search">검색</string>
     <string name="savedCountries">저장된 나라</string>
     <string name="country">나라: </string>
