--- a/app/src/main/res/values-ko/StringFredKr.xml
+++ b/app/src/main/res/values-ko/StringFredKr.xml
@@ -15,4 +15,5 @@
     <string name="save">저장하기</string>
     <string name="covidFragTitle">코로나-19 데이타COVID-19 Data</string>
     <string name="countriesSaved">저장된 나라</string>
+    <string name="help">사용 방법</string>
 </resources>
