--- a/app/src/main/res/values/FredString.xml
+++ b/app/src/main/res/values/FredString.xml
@@ -15,6 +15,8 @@
     <string name="covidFragTitle">COVID-19 Data</string>
     <string name="countriesSaved">Countries Saved</string>
     <string name="writeEndDate">End date (Write in YYYY-MM-DD format)</string>
+    <string name="help">Help</string>
+
 
 
 </resources>
