--- a/app/src/main/res/layout/activity_covidlist.xml
+++ b/app/src/main/res/layout/activity_covidlist.xml
@@ -6,12 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".CovidList">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="40dp"
-        android:layout_weight="0"
-        android:text="@string/covidListTitle"/>
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="40dp"
+            android:layout_weight="100"
+            android:text="@string/covidListTitle"/>
+        <Button
+            android:id="@+id/helpListButton"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Help"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/progressBar"
