--- a/app/src/main/res/layout/dingeventlayout.xml
+++ b/app/src/main/res/layout/dingeventlayout.xml
@@ -24,7 +24,7 @@
         android:textColorHighlight="@color/black"/>
     <Button
         android:id="@+id/view"
-        android:text="View"
+        android:text="@string/view"
         android:textAllCaps="false"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
 
     <Button
         android:id="@+id/save"
-        android:text="Save"
+        android:text="@string/save"
         android:textAllCaps="false"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
