--- a/app/src/main/res/values/davidstrings.xml
+++ b/app/src/main/res/values/davidstrings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="searchButtonText">SEARCH</string>
-    <string name="titleDavidThran">Audio Database API - David Thran</string>
-    <string name="savedAlbums">My Songs</string>
-    <string name="helpButton">Help</string>
+    <string name="searchButtonText" translatable="false">SEARCH</string>
+    <string name="titleDavidThran" translatable="false">Audio Database API - David Thran</string>
+    <string name="savedAlbums" translatable="false">My Songs</string>
+    <string name="helpButton" translatable="false">Help</string>
 
 </resources>
